--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     //Rounded Image View
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
+    // Material Navigation Drawer
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
